test & cleanup build.gradle